--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -149,6 +149,9 @@
     <None Include="..\Build\Assets\Materials\lava.mtrl" />
     <None Include="..\Build\Assets\Materials\multi.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
+    <None Include="..\Build\Assets\Materials\reflection.mtrl" />
+    <None Include="..\Build\Assets\Materials\reflection_reflaction.mtrl" />
+    <None Include="..\Build\Assets\Materials\refraction.mtrl" />
     <None Include="..\Build\Assets\Materials\rock.mtrl" />
     <None Include="..\Build\Assets\Materials\rocks.mtrl" />
     <None Include="..\Build\Assets\Materials\skeleton.mtrl" />
@@ -168,6 +171,15 @@
     <None Include="..\Build\Assets\Shaders\basic_phong.frag" />
     <None Include="..\Build\Assets\Shaders\basic_phong.prog" />
     <None Include="..\Build\Assets\Shaders\basic_phong.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection_refraction.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.vert" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.frag" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.prog" />
     <None Include="..\Build\Assets\Shaders\FX\skybox.vert" />
